Update exec usage